--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <h1>Profesjonalna Obróbka CNC</h1>
     </header>
     <nav>
-        <a href="#uslugi">Usługi</a>
-        <a href="#o-nas">O nas</a>
-        <a href="#kontakt">Kontakt</a>
+        <a href="uslugi.html">Usługi</a>
+        <a href="o-nas.html">O nas</a>
+        <a href="kontakt.html">Kontakt</a>
     </nav>
     <div class="container">
         <section id="uslugi">
