--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>O Nas</h2>
             <p>Jesteśmy firmą z wieloletnim doświadczeniem w obróbce metali. Gwarantujemy najwyższą jakość wykonania.</p>
         </section>
-        <section id="kontakt">
+        <section id="kontakt.html">
             <h2>Kontakt</h2>
             <p>Skontaktuj się z nami pod adresem: kontakt@cncfirmapl.com lub telefonicznie: 123-456-789.</p>
         </section>
