--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <a href="kontakt.html">Kontakt</a>
     </nav>
     <div class="container">
-        <section id="uslugi">
+        <section id="uslugi.html">
             <h2>Nasze Usługi</h2>
             <p>Oferujemy precyzyjną obróbkę CNC, frezowanie, toczenie oraz inne usługi dostosowane do Twoich potrzeb.</p>
         </section>
-        <section id="o-nas">
+        <section id="o-nas.html">
             <h2>O Nas</h2>
             <p>Jesteśmy firmą z wieloletnim doświadczeniem w obróbce metali. Gwarantujemy najwyższą jakość wykonania.</p>
         </section>
