--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <nav>
         <a href="uslugi.html">Usługi</a>
         <a href="o-nas.html">O nas</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="kontakt">Kontakt</a>
     </nav>
     <div class="container">
         <section id="uslugi.html">
@@ -62,7 +62,7 @@
             <h2>O Nas</h2>
             <p>Jesteśmy firmą z wieloletnim doświadczeniem w obróbce metali. Gwarantujemy najwyższą jakość wykonania.</p>
         </section>
-        <section id="kontakt.html">
+        <section id="kontakt">
             <h2>Kontakt</h2>
             <p>Skontaktuj się z nami pod adresem: kontakt@cncfirmapl.com lub telefonicznie: 123-456-789.</p>
         </section>
