--- a/kontakt.html
+++ b/kontakt.html
@@ -70,20 +70,20 @@
         <h1>Profesjonalna Obróbka CNC</h1>
     </header>
     <nav>
-        <a href="#uslugi">Usługi</a>
-        <a href="#o-nas">O nas</a>
-        <a href="#kontakt">Kontakt</a>
+        <a href="#uslugi.html">Usługi</a>
+        <a href="o-nas.html">O nas</a>
+        <a href="kontakt.html">Kontakt</a>
     </nav>
     <div class="container">
-        <section id="uslugi">
+        <section id="uslugi.html">
             <h2>Nasze Usługi</h2>
             <p>Oferujemy precyzyjną obróbkę CNC, frezowanie, toczenie oraz inne usługi dostosowane do Twoich potrzeb.</p>
         </section>
-        <section id="o-nas">
+        <section id="o-nas.html">
             <h2>O Nas</h2>
             <p>Jesteśmy firmą z wieloletnim doświadczeniem w obróbce metali. Gwarantujemy najwyższą jakość wykonania.</p>
         </section>
-        <section id="kontakt">
+        <section id="kontakt.html">
             <h2>Kontakt</h2>
             <p>Skontaktuj się z nami pod adresem: kontakt@cncfirmapl.com lub telefonicznie: 123-456-789.</p>
             <div class="contact-form">
