--- a/404.html
+++ b/404.html
@@ -51,11 +51,11 @@
 <body>
     <div class="container error-container">
         <h1>404</h1>
-        <p>Przepraszamy, ale strona, której szukasz, nie istnieje.</p>
+        <p>Nie znaleziono strony.</p>
         
         <div class="image-box">
             <img src="images/error-404.jpg" alt="Błąd 404 - Strona nie istnieje" class="responsive-img">
-            <p class="image-caption">Ups! Strona nie została znaleziona.</p>
+            <p class="image-caption">Znaleziona psa w szopie.</p>
         </div>
 
         <a href="index.html">Powrót na stronę główną</a>
