--- a/kontakt.html
+++ b/kontakt.html
@@ -14,6 +14,7 @@
         <a href="index.html">Strona Główna</a>
         <a href="o-nas.html">O nas</a>
         <a href="kontakt.html">Kontakt</a>
+        <a href="tulejki.html">Tulejki</a>
     </nav>
     <div class="container">
         <h2>Skontaktuj się z nami</h2>
