--- a/o-nas.html
+++ b/o-nas.html
@@ -14,6 +14,7 @@
         <a href="index.html">Strona Główna</a>
         <a href="o-nas.html">O nas</a>
         <a href="kontakt.html">Kontakt</a>
+        <a href="tulejki.html">Tulejki</a>
     </nav>
     <div class="container">
         <h2>Kim jesteśmy?</h2>
