--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
         
         <div class="image-box">
             <img src="images/error-404.jpg" alt="Błąd 404 - Strona nie istnieje" class="responsive-img">
-            <p class="image-caption">Znaleziona psa w szopie.</p>
+            <p class="image-caption">Znaleziono psa w szopie.</p>
         </div>
 
         <a href="index.html">Powrót na stronę główną</a>
